Device mapper, service, repository - refactoring